Cart - Quatity must lessthan product stock

--- a/Views/User/homePage.ejs
+++ b/Views/User/homePage.ejs
@@ -174,8 +174,7 @@
                                                 </a>
                                             </div>
                                             <div class="product-action-1">
-                                                <!-- <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a> -->
-                                                <a aria-label="Add To Wishlist" class="action-btn hover-up addToWishlis" href="/addToWishlist?id=<%= product._id %>"><i class="fi-rs-heart"></i></a>
+                                                <a aria-label="Add To Wishlist" class="action-btn hover-up addToWishlist" data-productId="<%= product._id %>"><i class="fi-rs-heart"></i></a>
                                             </div>
                                             <div class="product-badges product-badges-position product-badges-mrg">
                                                 <span class="hot">Featured</span>
@@ -1517,12 +1516,12 @@
             })
 
             // Add to wishlist 
-            document.querySelectorAll('.addToCart').forEach((element)=>{
+            document.querySelectorAll('.addToWishlist').forEach((element)=>{
                 element.addEventListener('click', function(event){
                   
                     event.preventDefault();
                     const productId = element.getAttribute('data-productId');
-                    fetch(`/addToCart?id=${productId}`)
+                    fetch(`/addToWishlist?id=${productId}`)
                     
                     .then((response)=>{
                         if(!response.ok){
@@ -1532,14 +1531,25 @@
                     })
 
                     .then((data)=>{
-                        console.log("Added to cart:", data);
-                        Swal.fire({
-                            position : 'top-center',
-                            icon : 'success',
-                            title : 'Added to cart',
-                            showConfirmButton: false,
-                            timer: 1500
-                        })
+                        if(data.productExist){
+                            console.log("Product already exist in wishlist:", data);
+                            Swal.fire({
+                                position : 'top-center',
+                                icon : 'error',
+                                title : 'Product already exist in wishlist',
+                                showConfirmButton: false,
+                                timer: 1500
+                            })
+                        }else{
+                            console.log("Added to wishlist:", data);
+                            Swal.fire({
+                                position : 'top-center',
+                                icon : 'success',
+                                title : 'Added to wishlist',
+                                showConfirmButton: false,
+                                timer: 1500
+                            })
+                        }
                     })
 
                     .catch((err)=>{
