--- a/Views/User/user-allCategory.ejs
+++ b/Views/User/user-allCategory.ejs
@@ -101,7 +101,7 @@
                                 <li><a href="/allCategory?brand=ACER">ACER</a></li>
                                 <li><a href="/allCategory?brand=VU">VU</a></li>
                                 <li><a href="/allCategory?brand=SONY">SONY</a></li>
-                                <li><a href="/allCategory?brand=TCL">TCL</a></li>
+                                <li><a href="/allCategory?brand=MI">MI</a></li>
                             </ul>
                         </div>
                         <!-- Fillter By Price -->
