--- a/Views/User/user-profile.ejs
+++ b/Views/User/user-profile.ejs
@@ -1,6 +1,23 @@
 ﻿<%- include('../Partials/userHeader')  -%>
 
-
+<style>
+    .bottom-button-style{
+        height: 50px;
+        width: 100px; 
+        background-color: #60c4bc; 
+        color: #fff;
+        filter: drop-shadow(0 0 2px #fff);
+        border-radius: 15px; 
+        display: flex; 
+        align-items: center;
+        justify-content: center; 
+        font-size: 14px;
+        font-weight: 600;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
+        gap: 2px;
+        cursor: pointer;
+    }
+</style>
 
     <main class="main">
         <div class="page-header breadcrumb-wrap">
@@ -30,7 +47,10 @@
                                             <a class="nav-link" id="address-tab" data-bs-toggle="tab" href="#address" role="tab" aria-controls="address" aria-selected="true"><i class="fi-rs-marker mr-10"></i>My Address</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="account-detail-tab" data-bs-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="true"><i class="fi-rs-user mr-10"></i>Account details</a>
+                                            <a class="nav-link" id="account-detail-tab" data-bs-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="true"><i class="fi fi-rs-user mr-10"></i>Account details</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="account-detail-tab" data-bs-toggle="tab" href="#wallet" role="tab" aria-controls="account-detail" aria-selected="true"><i class="fas fa-wallet mr-10"></i>Wallet</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/userLogout"><i class="fi-rs-sign-out mr-10"></i>Logout</a>
@@ -107,7 +127,7 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <% if( locals.addressObj.address.length > 0) {%>
+                                            <% if( locals.addressObj?.address.length > 0) {%>
                                                 <% addressObj.address.forEach((addr)=>{ %> 
                                                     <div class="col-lg-6">
                                                         <div class="card mb-10">
@@ -221,7 +241,28 @@
                                             </div>
                                         </div>
                                     </div>
-
+                                    <!-- Wallets -->
+                                    <div class="tab-pane fade" id="wallet" role="tabpanel" aria-labelledby="wallet-tab">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h5 class="mb-0 text-brand">Wellets</h5>
+                                            </div>
+                                            <div class="card-body">
+                                                <div class="wallet-box" style="display: flex; align-items: center; flex-direction: column;">
+                                                    <div class="top-bar" style="background-color: #60c4bc; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; height: 100px;width: 300px; border-radius: 15px 15px 0 0; padding: 10px;">
+                                                        <div class="top-bar-header" style="color: #fff;">Main wallet</div>
+                                                        <div class="top-barprice" style="display: flex;justify-content: center; color: #fff; filter: drop-shadow(0 0 3px #fff); align-items: center; font-size: 25px; margin-top: 15px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+                                                            <sup>₹</sup><span style="font-size: 35px;"><%= wallet?.amount ?? 0 %></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="bottom-bar" style="background-color: #291d12; height: 80px;width: 300px; border-radius: 0 0 15px 15px; display: flex; align-items: center; justify-content: space-evenly;">
+                                                        <div class="bottom-button-style"><i class="fa-solid fa-circle-plus"></i>Top Up</div>
+                                                        <div class="bottom-button-style"><i class="fa-solid fa-download"></i>Withdrow</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
