--- a/Views/User/user-profile.ejs
+++ b/Views/User/user-profile.ejs
@@ -252,7 +252,7 @@
                                                     <div class="top-bar" style="background-color: #60c4bc; color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; height: 100px;width: 300px; border-radius: 15px 15px 0 0; padding: 10px;">
                                                         <div class="top-bar-header" style="color: #fff;">Main wallet</div>
                                                         <div class="top-barprice" style="display: flex;justify-content: center; color: #fff; filter: drop-shadow(0 0 3px #fff); align-items: center; font-size: 25px; margin-top: 15px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-                                                            <sup>₹</sup><span style="font-size: 35px;"><%= wallet?.amount ?? 0 %></span>
+                                                            <sup>₹</sup><span style="font-size: 35px;"><%= wallet.amount ?? 0 %></span>
                                                         </div>
                                                     </div>
                                                     <div class="bottom-bar" style="background-color: #291d12; height: 80px;width: 300px; border-radius: 0 0 15px 15px; display: flex; align-items: center; justify-content: space-evenly;">
