--- a/Views/Admin/adminDashboard.ejs
+++ b/Views/Admin/adminDashboard.ejs
@@ -12,6 +12,7 @@
             </div>
         </div>
         <nav>
+            <div style="height: 645px;">
             <ul class="menu-aside">
                 <li class="menu-item active">
                     <a class="menu-link " href="/admin/adminDashboard"> <i class="icon material-icons md-home"></i>
@@ -40,11 +41,6 @@
                             <span class="text">User</span></a>
                     </li>
                 </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminTransactions"> <i class="icon material-icons md-monetization_on"></i>
-                        <span class="text">Transactions</span>
-                    </a>
-                </li>
                 <li class="menu-item has-submenu">
                     <a class="menu-link" href="#"> <i class="icon material-icons md-add_circle"></i>
                         <span class="text">ADD</span>
@@ -57,35 +53,20 @@
                     </div>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminBrands"> <i class="icon material-icons md-grade"></i>
-                        <span class="text">Brand</span> </a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminReviews"> <i class="icon material-icons md-comment"></i>
-                        <span class="text">Reviews</span>
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" disabled href="/admin/adminStatistics"> <i class="icon material-icons md-pie_chart"></i>
-                        <span class="text">Statistics</span>
+                    <a class="menu-link" disabled href="/admin/salesReport"> <i class="icon material-icons md-pie_chart"></i>
+                        <span class="text">Sales report</span>
                     </a>
                 </li>
             </ul>
+            </div>
             <hr>
-            <ul class="menu-aside">
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminSettings"> <i class="icon material-icons md-settings"></i>
-                        <span class="text">Settings</span>
-                    </a>
-                </li>
-                <li class="menu-item disabled">
-                    <a class="menu-link" href="/admin/adminStarterPage"> <i class="icon material-icons md-local_offer"></i>
-                        <span class="text"> Starter page </span>
-                    </a>
-                </li>
-            </ul>
-            <br>
-            <br>
+                <ul class="menu-aside">
+                    <li class="menu-item">
+                        <a class="menu-link" href="/admin/adminSettings"> <i class="icon material-icons md-settings"></i>
+                            <span class="text">Settings</span>
+                        </a>
+                    </li>
+                </ul>
         </nav>
     </aside>
 
