--- a/Views/User/user-allCategory.ejs
+++ b/Views/User/user-allCategory.ejs
@@ -120,6 +120,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="sort mb-10 mt-10">
+                                <label for="sort" class="fw-900">Sort by</label>
+                                <div class="radio-buttons d-flex flex-column">
+                                    <div class="">
+                                        <input type="radio" class="form-check-input" name="sort" value="lowToHigh" style="height: 18px; width: 18px; margin-right: 4px;">
+                                        <label for="sort">Low to High</label>
+                                    </div>
+                                    <div class="">
+                                        <input type="radio" class="form-check-input" name="sort" value="highToLow" style="height: 18px; width: 18px; margin-right: 4px;">
+                                        <label for="sort">High to Low</label>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="list-group">
                                 <div class="list-group-item mb-10 mt-10">
                                     <label class="fw-900">Size</label>
