--- a/Views/Partials/userHeader.ejs
+++ b/Views/Partials/userHeader.ejs
@@ -282,59 +282,13 @@
                                     <li>
                                         <a class="" href="/allCategory">All category</a>
                                     </li>
-                                    <li class="position-static"><a href="#">Mega menu <i class="fi-rs-angle-down"></i></a>
-                                        <ul class="mega-menu">
-                                            <li class="sub-mega-menu sub-mega-menu-width-22">
-                                                <a class="menu-title" href="#">Popular Brands</a>
-                                                <ul>
-                                                    <li><a href="#">Samsung</a></li>
-                                                    <li><a href="#">LG</a></li>
-                                                    <li><a href="#">Vu</a></li>
-                                                    <li><a href="#">Sony</a></li>
-                                                    <li><a href="#">TCL</a></li>
-                                                    <li><a href="#">Xiaomi</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="sub-mega-menu sub-mega-menu-width-22">
-                                                <a class="menu-title" href="#">Resolution</a>
-                                                <ul>
-                                                    <li><a href="#">720p</a></li>
-                                                    <li><a href="#">1080p</a></li>
-                                                    <li><a href="#">4K</a></li>
-                                                    <li><a href="#">8K</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="sub-mega-menu sub-mega-menu-width-34">
-                                                <div class="menu-banner-wrap">
-                                                    <a href="shop-product-right.html"><img src="/userAssets/imgs/banner/menu-banner.jpg" alt="Evara"></a>
-                                                    <div class="menu-banner-content">
-                                                        <h4>Hot deals</h4>
-                                                        <h3>Don't miss<br> Trending</h3>
-                                                        <div class="menu-banner-price">
-                                                            <span class="new-price text-success">Save to 50%</span>
-                                                        </div>
-                                                        <div class="menu-banner-btn">
-                                                            <a href="shop-product-right.html">Shop now</a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="menu-banner-discount">
-                                                        <h3>
-                                                            <span>35%</span>
-                                                            off
-                                                        </h3>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    
                                     <li><a href="#">Pages <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
                                             <li><a href="/allCategory">All Category</a></li>
-                                            <li><a href="#">My Account</a></li>
+                                            <li><a href="/userProfile">My Account</a></li>
                                             <li><a href="/userLogin">Login</a></li>
-                                            <li><a href="#">Wishlist</a></li>
-                                            <li><a href="#">Cart</a></li>
+                                            <li><a href="/wishlist">Wishlist</a></li>
+                                            <li><a href="/cart">Cart</a></li>
                                             <li><a href="#">Contact</a></li>
                                         </ul>
                                     </li>
