--- a/Views/Admin/adminEditProduct.ejs
+++ b/Views/Admin/adminEditProduct.ejs
@@ -268,7 +268,7 @@
                             <% }) %>
                         </div>
                         <div class="col-lg-2">
-                            <button type="submit" class="btn btn-md rounded font-sm hover-up">Publich</button>
+                            <button type="submit" class="btn btn-md rounded font-sm hover-up">Publish</button>
                         </div>
                     </div>
                 </div>
