--- a/Views/Partials/userFooter.ejs
+++ b/Views/Partials/userFooter.ejs
@@ -69,11 +69,11 @@
                 <div class="footer-bottom"></div>
             </div>
             <div class="col-lg-6">
-                <p class="float-md-left font-sm text-muted mb-0">&copy; 2022, <strong class="text-brand">Evara</strong> - HTML Ecommerce Template </p>
+                <p class="float-md-left font-sm text-muted mb-0">&copy; 2022, <strong class="text-brand">Televisão</strong> - Ecommerce </p>
             </div>
             <div class="col-lg-6">
                 <p class="text-lg-end text-start font-sm text-muted mb-0">
-                    Designed by <a href="http://alithemes.com/" target="_blank">Alithemes.com</a>. All rights reserved
+                    Designed by <a href="https://github.com/MuhammedMidlajtOfficial" target="_blank">MIDLAJ</a>. All rights reserved
                 </p>
             </div>
         </div>
