--- a/Views/User/user-wishlist.ejs
+++ b/Views/User/user-wishlist.ejs
@@ -68,6 +68,7 @@
                     })
 
                     .then((data)=>{
+                        console.log(data);
                         if(data.outOfStock){
                             console.log("out of stock:", data);
                             Swal.fire({
